# email-forward-parser-py

./: .gitignore  README.md  client.py  forward_parser.py  forward_parser_test.py  loop.py  pyproject.toml  regexs.py  utils.py
emailforwardparser/: client.py  forward_parser.py  loop.py  regexs.py  utils.py
tests/: cases.py  client_test.py  forward_parser_test.py
