[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-forward-parser"
version = "0.1.0"
description = "Python Library to parse forwarded email messages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gmarking/email-forward-parser-py"
Issues = "https://github.com/gmarking/email-forward-parser-py/issues"

[tool.pytest.ini_options]
pythonpath = "emailforward-parser"

[tool.hatch.build.targets.wheel]
packages = ["emailforwardparser"]